--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,17 @@
 			  <artifactId>mule-maven-plugin</artifactId>
 			  <version>2.0</version>
 			  <configuration>
-			    <deploymentType>arm</deploymentType>
+			    <deploymentType>cloudhub</deploymentType>
+			    <muleVersion>3.7.2</muleVersion>
 			    <username>shakib</username>
 			    <password>Wr0ngP@55w0rd</password>
-			    <target>server-name</target>
-			    <!-- One of: server, serverGroup, cluster -->
-			    <targetType>server</targetType>
+			    <workerType>micro</workerType>
+			    <redeploy>true</redeploy>
 			    <environment>Production</environment>
+			    <!--  <target>server-name</target> -->
+			    <!-- One of: server, serverGroup, cluster -->
+			    <!-- <targetType>server</targetType> -->
+			    <!-- <environment>Production</environment> -->
 			  </configuration>
 			  <executions>
 			    <execution>
